--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,34 @@
 version: "3"
 services:
+
+  frontend:
+    image: nginx:latest
+    container_name: nginx_app
+    ports: 
+      - "8080:80"
+    depends_on: 
+      - app
+    volumes: 
+      #- ./etc/nginx/nginx.conf:/etc/nginx/nginx.conf
+      - ./nginx.conf:/etc/nginx/nginx.conf
+    networks: 
+      - frontend
+    
+
+
   es:
     image: docker.elastic.co/elasticsearch/elasticsearch:6.3.2
     container_name: es
     environment:
       - discovery.type=single-node
-    ports:
-      - 9200:9200
-    volumes:
-      - esdata1:/usr/share/elasticsearch/data
+    #ports:
+     # - 9200:9200
+    #volumes:
+     # - esdata1:/usr/share/elasticsearch/data
+    networks: 
+      - backend
+
+
   app:
     image: mult_foodtrucks_image
     command: python app.py
@@ -18,6 +38,13 @@ services:
       - 5000:5000
     volumes:
       - ./flask-app:/project/flask-app
+    networks: 
+      - frontend
+      - backend
+
 volumes:
     esdata1:
-      driver: local
+
+networks: 
+   frontend:
+   backend:
