--- a/nginx.conf
+++ b/nginx.conf
@@ -5,16 +5,18 @@ http {
   server {
     listen 80 default_server;
     server_name localhost;
+    include /etc/nginx/mime.types;
+    root /usr/share/nginx/html;
 
     location / {
-      proxy_pass http://app:5000/;
-      proxy_set_header Host "localhost";
+      
+      index index.html;
       } 
   
     
 
-    location /stt {
-      proxy_pass         http://app:5000/;
+    location /search {
+      proxy_pass         http://app:5000/search;
       proxy_redirect     off;
 
       proxy_set_header   Host             $host;
