all is work, and the static files from the app are deleted!

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,8 +36,8 @@ services:
       - es
     ports:
       - 5000:5000
-    volumes:
-      - ./flask-app:/project/flask-app
+    #volumes:
+      #- ./flask-app:/project/flask-app
     networks: 
       - frontend
       - backend
